syntax = "proto3";

option csharp_namespace = "GreeterClient";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc SayHelloStream (HelloRequest) returns (stream HelloReply); // server
  rpc SayHelloStreamClient (stream HelloRequest) returns (HelloReply); // client
  rpc SayHelloBidirectional (stream HelloRequest) returns (stream HelloReply); // bidi
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}
